--- a/src/main/resources/com/example/mini_projet_java_fx/hello-view.fxml
+++ b/src/main/resources/com/example/mini_projet_java_fx/hello-view.fxml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.mini_projet_java_fx.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="315.0" prefWidth="562.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mini_projet_java_fx.HelloController">
+   <center>
+      <ImageView fitHeight="332.0" fitWidth="564.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+         <image>
+            <Image url="@fondDepartJeu.jpg" />
+         </image>
+      </ImageView>
+   </center>
+   <bottom>
+      <Button fx:id="buttonPlay" mnemonicParsing="false" onAction="#startGame" text="Jouer " textFill="RED" BorderPane.alignment="CENTER">
+         <font>
+            <Font name="System Bold Italic" size="28.0" />
+         </font>
+      </Button>
+   </bottom>
+   <top>
+      <Label fx:id="welcomeText" text="Label" BorderPane.alignment="CENTER" />
+   </top>
+</BorderPane>
