--- a/src/main/resources/com/example/mini_projet_java_fx/hello-view.fxml
+++ b/src/main/resources/com/example/mini_projet_java_fx/hello-view.fxml
@@ -1,28 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="315.0" prefWidth="562.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mini_projet_java_fx.HelloController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="315.0" prefWidth="562.0" stylesheets="@StyleHome.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mini_projet_java_fx.HelloController">
    <center>
-      <ImageView fitHeight="332.0" fitWidth="564.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
-         <image>
-            <Image url="@fondDepartJeu.jpg" />
-         </image>
-      </ImageView>
-   </center>
-   <bottom>
-      <Button fx:id="buttonPlay" mnemonicParsing="false" onAction="#startGame" text="Jouer " textFill="RED" BorderPane.alignment="CENTER">
+      <Button fx:id="buttonPlay" mnemonicParsing="false" onAction="#startGame" prefHeight="59.0" prefWidth="118.0" text="Jouer " textFill="RED" BorderPane.alignment="CENTER">
          <font>
             <Font name="System Bold Italic" size="28.0" />
          </font>
       </Button>
-   </bottom>
-   <top>
-      <Label fx:id="welcomeText" text="Label" BorderPane.alignment="CENTER" />
-   </top>
+   </center>
+   <left>
+      <ChoiceBox fx:id="niveau" prefHeight="18.0" prefWidth="101.0" BorderPane.alignment="CENTER" />
+   </left>
 </BorderPane>
